Fix creation of group with clickthru
Fix various issues when creating a group with the require clickthru
form field:

* The help popover had a lower z-index than the modal, so displayed
  behind the modal, which wasn't useful to anyone.
* The require clickthru form field was ignored and not persisted to
  the database.
* The fields were too narrow, resulting in odd wrapping.
* A bug in the verification logic meant that we weren't checking
  that the user really did confirm the clickthru agreement (although
  it would have been hard to submit without confirming through a
  browser UI without taking special action).
* The button construction for the join form was odd and overly
  complex, which made testing difficult.

Add an integration test for creating and then requesting membership
in a group with a required clickthru agreement.

--- a/grouper/fe/static/css/grouper.css
+++ b/grouper/fe/static/css/grouper.css
@@ -271,6 +271,10 @@ span.disabled {
     white-space: nowrap;
 }
 
+.popover {
+    z-index: 2000;
+}
+
 .popover-content {
     font-weight: normal;
 }
